src/components/footer/Footer.css
.footer-parent{
    background-color: var(--red);
}
.footer-parent .custom-section-padding{
    padding: 5% 0;
    border-bottom: 1px solid var(--navLoginBtnBorder);
}
.footer-brand p{
    margin-top: 35px;
    color: var(--lightPink);
    font-size: 15px;
}
.footer-brand img{
    transition: all 250ms ease;
}
.footer-brand img:hover{
    opacity: 0.8;
}
.footer-main-inner{
    display: grid;
    grid-template-columns: repeat(4,1fr);
    gap: 30px;
}

.footer-item ul{
    margin: unset;
    padding: unset;
}
.footer-item ul li{
    list-style: none;
}
.footer-item ul li h6{
    color: var(--white);
    font-size: 18px;
    font-weight: 500;
    margin-bottom: 25px;
}
.footer-item ul li button {
    font-weight: 600;
    margin: 3px 0;
    color: var(--lightPink);
    font-family: 'Open Sans', sans-serif;
    transition: all 300ms ease;
}
.footer-item ul li button:hover{
    transform: translateX(3px);
    color: white;
}

.footer-copyright{
    padding: 35px 0;
}
.footer-copyright-inner{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.footer-copyright-inner p{
    margin-bottom: 0;
    color: var(--lightPink);
    font-size: 14px;
    font-family: 'Open Sans', sans-serif;
}
.footer-social-icons button img{
    width: 18px;
    margin: 0 8px;
    transition: all 300ms ease;
}
.footer-social-icons button img:hover{
    opacity: 0.7;
}


@media (min-width : 992px) and (max-width: 1199.9px)
{
    .footer-brand p{
        font-size: 14px;
    }
    .footer-brand img{
        width: 120px;
    }
    .footer-copyright{
        padding: 25px 0;
    }
}

@media (min-width : 768px) and (max-width: 991.8px){
    .footer-brand p{
        font-size: 16px;
    }
    .footer-main-inner{
        display: grid;
        gap: 41px;
    }
    .footer-brand{
        grid-column: 1/ span 4;
    }
    .footer-copyright{
        padding: 20px 0;
    }
}


@media (min-width : 576px) and (max-width: 767.9px)
{
    .footer-parent .custom-section-padding{
        padding: 45px 0;
    }
    .footer-brand{
        text-align: center;
    }
    .footer-brand p{
        margin-bottom: unset;
    }
    .footer-main-inner{
        grid-template-columns: 1fr;
        gap: 20px;
        justify-items: center;
        text-align: center;
    }
    .footer-copyright .custom-container{
        padding: 25px 0;
    }
    .footer-copyright-inner{
        display: flex;
        flex-direction: column;
      
    }
    .footer-copyright-inner p{
        margin-bottom: 30px;
    }
}

@media  (max-width: 575.8px) {
    .footer-parent .custom-section-padding{
        padding: 45px 0;
    }
    .footer-brand{
        text-align: center;
    }
    .footer-brand p{
        margin-bottom: unset;
    }
    .footer-main-inner{
        grid-template-columns: 1fr;
        gap: 20px;
        justify-items: center;
        text-align: center;
    }
    .footer-copyright .custom-container{
        padding: 25px 0;
    }
    .footer-copyright-inner{
        display: flex;
        flex-direction: column;
      
    }
    .footer-copyright-inner p{
        margin-bottom: 30px;
        padding: 0 15px;
        text-align: center;
    }
}

